--- a/.gitignore
+++ b/.gitignore
@@ -38,15 +38,15 @@ build/
 
 
 # dependencies
-/node_modules
-/.pnp
+/frontend/node_modules
+/frontend/.pnp
 .pnp.js
 
 # testing
-/coverage
+/frontend/coverage
 
 # production
-/build
+/frontend/build
 
 # misc
 .DS_Store
