--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.10.0",
@@ -39,6 +40,5 @@
       "last 1 safari version"
     ]
   },
-
   "proxy": "http://localhost:8080"
 }
