--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,5 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "prettier": "^2.8.8"
+  }
 }
