--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "5.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-query": "^3.39.3",
