--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
     "react-validation": "^3.0.7",
     "reactstrap": "^8.10.0",
     "web-vitals": "^2.1.4"
