--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-countdown": "^2.3.5",
